<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filtrer"
        android:icon="@drawable/ic_icon"
        android:title="Filtrer"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/trier_date"
                android:title="Date">
            </item>

            <item android:id="@+id/trier_lieu"
                android:title="Lieu"
                app:showAsAction="ifRoom|collapseActionView"
                app:actionViewClass="android.widget.SearchView" />
        </menu>

    </item>

</menu>